; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_m32r_sio.c_m32r_sio_stop_tx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_m32r_sio.c_m32r_sio_stop_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }
%struct.uart_sio_port = type { i32 }

@UART_IER_THRI = common dso_local global i32 0, align 4
@UART_IER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_port*)* @m32r_sio_stop_tx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @m32r_sio_stop_tx(%struct.uart_port* %0) #0 {
  %2 = alloca %struct.uart_port*, align 8
  %3 = alloca %struct.uart_sio_port*, align 8
  store %struct.uart_port* %0, %struct.uart_port** %2, align 8
  %4 = load %struct.uart_port*, %struct.uart_port** %2, align 8
  %5 = bitcast %struct.uart_port* %4 to %struct.uart_sio_port*
  store %struct.uart_sio_port* %5, %struct.uart_sio_port** %3, align 8
  %6 = load %struct.uart_sio_port*, %struct.uart_sio_port** %3, align 8
  %7 = getelementptr inbounds %struct.uart_sio_port, %struct.uart_sio_port* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @UART_IER_THRI, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %25

12:                                               ; preds = %1
  %13 = load i32, i32* @UART_IER_THRI, align 4
  %14 = xor i32 %13, -1
  %15 = load %struct.uart_sio_port*, %struct.uart_sio_port** %3, align 8
  %16 = getelementptr inbounds %struct.uart_sio_port, %struct.uart_sio_port* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = and i32 %17, %14
  store i32 %18, i32* %16, align 4
  %19 = load %struct.uart_sio_port*, %struct.uart_sio_port** %3, align 8
  %20 = load i32, i32* @UART_IER, align 4
  %21 = load %struct.uart_sio_port*, %struct.uart_sio_port** %3, align 8
  %22 = getelementptr inbounds %struct.uart_sio_port, %struct.uart_sio_port* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @serial_out(%struct.uart_sio_port* %19, i32 %20, i32 %23)
  br label %25

25:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @serial_out(%struct.uart_sio_port*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
